# yt-feeds

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: deploy.yml
docs/: 00-Installation.md  01-Configuration.md  CONTRIBUTING.md
src/: cache.rs  config.rs  finder.rs  input.rs  loading.rs  log.rs  main.rs  mpv.rs  page.rs  process.rs  search.rs  time.rs  updates.rs  utilities.rs  view.rs  yt.rs
src/data/: channel.rs  channels.rs  mod.rs  video.rs
src/display/: screen.rs
src/pages/: mod.rs  page_feed_channel.rs  page_feed_mixed.rs  page_home.rs  page_playing.rs  page_refresh.rs  page_search_channel.rs  page_search_channel_typing.rs  page_search_video.rs  page_search_video_typing.rs  page_video.rs  page_watch_later.rs
src/state/: actions.rs  mod.rs  search.rs  state.rs
src/storage/: directory.rs
src/view/: formatting.rs  mod.rs  view.rs  view_feed_channel.rs  view_feed_mixed.rs  view_home.rs  view_playing.rs  view_refresh.rs  view_search_channel.rs  view_search_channel_typing.rs  view_search_video.rs  view_search_video_typing.rs  view_video.rs  view_watch_later.rs
src/views/: feed_view.rs  home_view.rs  information_view.rs  mod.rs  player_view.rs  search_channel_view.rs  search_video_view.rs  search_view.rs  watch_later_view.rs
