[package]
name = "yt-feeds"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139"}
itertools = "0.14.0"
dirs = "6.0.0"
chrono = { version = "0.4.40", features = ["serde"] }
crossterm = "0.28.1"
toml = "0.8.20"
users = "0.11.0"
